200 OK http://www.parliament.gh/parliamentarians/259

--- a/www.parliament.gh/ec62a1e1087e6be8cd4d2e829b08855c35eaabf7.yml
+++ b/www.parliament.gh/ec62a1e1087e6be8cd4d2e829b08855c35eaabf7.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:03:04 GMT
+    - Thu, 17 Nov 2016 16:21:20 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fe1d6617d4fa70c50b048389b3eb9507%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479376984%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De82ff89bc807293dd6974549a516bd04;
-      expires=Thu, 17-Nov-2016 12:03:04 GMT; path=/
-    - csrf_xmen=c256572f33bb16e089ef94d0ef334ffb; expires=Thu, 17-Nov-2016 12:03:04
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c26a57b774db199b06d53e68fc3e9e88%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399680%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De626f234d83330b760d179aa75b3ff0b;
+      expires=Thu, 17-Nov-2016 18:21:20 GMT; path=/
+    - csrf_xmen=a377df140667f44025d3bbed62f88f3a; expires=Thu, 17-Nov-2016 18:21:20
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16632'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:03:04 GMT
+recorded_at: Thu, 17 Nov 2016 16:21:20 GMT
