200 OK http://www.parliament.gh/parliamentarians/426

--- a/www.parliament.gh/e2d39ca14a9a43839dec53cba681fbb107e2664b.yml
+++ b/www.parliament.gh/e2d39ca14a9a43839dec53cba681fbb107e2664b.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:03:28 GMT
+    - Thu, 17 Nov 2016 16:21:55 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22561d354968a6f55e3ca3a68d56d1a0a1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377008%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6a2c85672957fec73c768c225eadf193;
-      expires=Thu, 17-Nov-2016 12:03:28 GMT; path=/
-    - csrf_xmen=6ff3f055923f092e8fee29d13b21e974; expires=Thu, 17-Nov-2016 12:03:28
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22691787d08447004f476fee4c132ae4bc%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399715%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D07da769eaf395437a4cf40f09d4009fe;
+      expires=Thu, 17-Nov-2016 18:21:55 GMT; path=/
+    - csrf_xmen=f4a4368cd402ef38a7a954e8d9a78cee; expires=Thu, 17-Nov-2016 18:21:55
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16215'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:03:28 GMT
+recorded_at: Thu, 17 Nov 2016 16:21:55 GMT
