200 OK http://www.parliament.gh/parliamentarians/87

--- a/www.parliament.gh/7c20e10f87c7012a8ad256f5d8084971e4a17065.yml
+++ b/www.parliament.gh/7c20e10f87c7012a8ad256f5d8084971e4a17065.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:03:43 GMT
+    - Thu, 17 Nov 2016 16:22:27 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224500351e0c92194905cb3584e6d924f2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377023%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dce5619c27e4ec1ac03e506a6d8547251;
-      expires=Thu, 17-Nov-2016 12:03:43 GMT; path=/
-    - csrf_xmen=3a0e16e68057d66da96a188976b3744c; expires=Thu, 17-Nov-2016 12:03:43
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ff26fb294a44841a855b5c37d184e19b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399747%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D53259ae2edc475bce0e34b265497a5a1;
+      expires=Thu, 17-Nov-2016 18:22:27 GMT; path=/
+    - csrf_xmen=2464e72fc46ff83a656e4ebb17d0bcc8; expires=Thu, 17-Nov-2016 18:22:27
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16702'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:03:43 GMT
+recorded_at: Thu, 17 Nov 2016 16:22:27 GMT
