200 OK http://www.parliament.gh/parliamentarians/88

--- a/www.parliament.gh/f3c25eba4a1ceb239645167e3a40c340293e4450.yml
+++ b/www.parliament.gh/f3c25eba4a1ceb239645167e3a40c340293e4450.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:04:09 GMT
+    - Thu, 17 Nov 2016 16:22:58 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223b949b19f7792df5c83534f98b068b79%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377049%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3d9f8d737a26be49f0388c058d3b4ba1;
-      expires=Thu, 17-Nov-2016 12:04:09 GMT; path=/
-    - csrf_xmen=f77215dc0f61910a86d403d04e807463; expires=Thu, 17-Nov-2016 12:04:09
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224d787995acbf5faad779cde2dd60d4c8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399779%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df0925e36bc4e0f75de8db6351b7c6665;
+      expires=Thu, 17-Nov-2016 18:22:59 GMT; path=/
+    - csrf_xmen=f2176a0a5439d3971cb05464fe34bb15; expires=Thu, 17-Nov-2016 18:22:59
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16684'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:04:09 GMT
+recorded_at: Thu, 17 Nov 2016 16:22:59 GMT
