--- a/www.parliament.gh/c63bf104f33e0f8d4fa0404ddb25ad8637daaab7.yml
+++ b/www.parliament.gh/c63bf104f33e0f8d4fa0404ddb25ad8637daaab7.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:04:24 GMT
+    - Thu, 17 Nov 2016 16:23:23 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d63ea77ef586d3b08a5199872791413d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377064%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbfb7020d1289d64ad2217ee773f122d7;
-      expires=Thu, 17-Nov-2016 12:04:24 GMT; path=/
-    - csrf_xmen=6a02235d924c4968aa514f3e968d8e5a; expires=Thu, 17-Nov-2016 12:04:24
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b214d9a657f491c9419fd12750944ee5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399804%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De3649247058e89102b895a1d91da746f;
+      expires=Thu, 17-Nov-2016 18:23:24 GMT; path=/
+    - csrf_xmen=62ed1f87305ff6375bbaac24833f7fc0; expires=Thu, 17-Nov-2016 18:23:23
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16677'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:04:24 GMT
+recorded_at: Thu, 17 Nov 2016 16:23:24 GMT
