--- a/www.parliament.gh/8eefce031aa8ccf649624901a5639cd9b2827bb2.yml
+++ b/www.parliament.gh/8eefce031aa8ccf649624901a5639cd9b2827bb2.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:04:44 GMT
+    - Thu, 17 Nov 2016 16:23:46 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b4ab4d3180b7682658317e1c17528a83%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377084%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5db1207eb1d90db6f1c0b98f893bd3dd;
-      expires=Thu, 17-Nov-2016 12:04:44 GMT; path=/
-    - csrf_xmen=c674d6ef105a8d7629701febc5303b8e; expires=Thu, 17-Nov-2016 12:04:44
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2263d8120d03d896c5c50cabc26be93af9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399826%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D47a436ae9c0b0582cff8d2d42a646e9f;
+      expires=Thu, 17-Nov-2016 18:23:46 GMT; path=/
+    - csrf_xmen=831f740b654447ef1630dbf7b775334f; expires=Thu, 17-Nov-2016 18:23:46
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17212'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:04:44 GMT
+recorded_at: Thu, 17 Nov 2016 16:23:46 GMT
