--- a/www.parliament.gh/1065d9bb13b89b530b563a0fe574a1046d6fe2e4.yml
+++ b/www.parliament.gh/1065d9bb13b89b530b563a0fe574a1046d6fe2e4.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:05:19 GMT
+    - Thu, 17 Nov 2016 16:24:14 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2284fe78008fafc60456aa8c94afa09401%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377119%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df1514cd3241f3e21f241b84f7c24155a;
-      expires=Thu, 17-Nov-2016 12:05:19 GMT; path=/
-    - csrf_xmen=79eba61d0e287f6863a0fa757343234e; expires=Thu, 17-Nov-2016 12:05:19
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b6b493865d3607fd34d0330839066a43%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399854%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dac638f44bf9e9d59cd7eaade54f0f4c6;
+      expires=Thu, 17-Nov-2016 18:24:14 GMT; path=/
+    - csrf_xmen=a18c1e838aaba83e089648af6930c44b; expires=Thu, 17-Nov-2016 18:24:14
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16551'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:05:19 GMT
+recorded_at: Thu, 17 Nov 2016 16:24:14 GMT
