--- a/www.parliament.gh/4464a48dc81db205047a9c997a5a9e317a2817a0.yml
+++ b/www.parliament.gh/4464a48dc81db205047a9c997a5a9e317a2817a0.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:05:44 GMT
+    - Thu, 17 Nov 2016 16:24:28 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2261aa05ca48d9a230b99d05b309052e90%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377144%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D03778a9a62695f09e40e34adbb8afba8;
-      expires=Thu, 17-Nov-2016 12:05:44 GMT; path=/
-    - csrf_xmen=19abad634bc8f85dc6c00f5de22d6ddd; expires=Thu, 17-Nov-2016 12:05:44
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229d9ee33260f89abe3e917ce804f4fe78%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399868%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D064ca1238dac56e4ce128be58685d8a3;
+      expires=Thu, 17-Nov-2016 18:24:28 GMT; path=/
+    - csrf_xmen=200769846b2bb9a5f4b45233e16dd850; expires=Thu, 17-Nov-2016 18:24:28
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16792'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:05:44 GMT
+recorded_at: Thu, 17 Nov 2016 16:24:28 GMT
