--- a/www.parliament.gh/7483ad7cc1ea5e292798262dc66140259f332a3f.yml
+++ b/www.parliament.gh/7483ad7cc1ea5e292798262dc66140259f332a3f.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:05:59 GMT
+    - Thu, 17 Nov 2016 16:24:58 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223389e0b376cf0b24840757567a31aee3%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377159%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5e3367e7b74b8fad287ac891bc990b9f;
-      expires=Thu, 17-Nov-2016 12:05:59 GMT; path=/
-    - csrf_xmen=705acb0c37a3763211a02b8beaffc2f4; expires=Thu, 17-Nov-2016 12:05:59
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fccfffce2fe59564260c8035da0d9d55%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399898%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D71492ff4006e7ccc09a6be592d678e97;
+      expires=Thu, 17-Nov-2016 18:24:58 GMT; path=/
+    - csrf_xmen=b9ddc9cb671182f44c78bb154230b048; expires=Thu, 17-Nov-2016 18:24:58
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16410'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:05:59 GMT
+recorded_at: Thu, 17 Nov 2016 16:24:58 GMT
