--- a/www.parliament.gh/590645c3250e943c15de855418c05501df06ea1e.yml
+++ b/www.parliament.gh/590645c3250e943c15de855418c05501df06ea1e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:06:14 GMT
+    - Thu, 17 Nov 2016 16:25:31 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22406f62f4a4c186d348fd35555c3cf92e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377174%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D25213ab4cda14c8b37569a95fc50e0d4;
-      expires=Thu, 17-Nov-2016 12:06:14 GMT; path=/
-    - csrf_xmen=f4b4a523edadd3a5833c5c6a69945d17; expires=Thu, 17-Nov-2016 12:06:14
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22de4490206c109b51efbda346a2c6902b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399932%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D820ebf5ed34909b34a7863f63c4fcee0;
+      expires=Thu, 17-Nov-2016 18:25:32 GMT; path=/
+    - csrf_xmen=ce8fa6d388018bf8c81b5602adeec647; expires=Thu, 17-Nov-2016 18:25:32
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16588'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:06:15 GMT
+recorded_at: Thu, 17 Nov 2016 16:25:32 GMT
