200 OK http://www.parliament.gh/parliamentarians/155

--- a/www.parliament.gh/3dfd0a585325dfc3c65040ad726c99bd7cfde0a1.yml
+++ b/www.parliament.gh/3dfd0a585325dfc3c65040ad726c99bd7cfde0a1.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:06:38 GMT
+    - Thu, 17 Nov 2016 16:25:56 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2213dae50e37d02ed49ec384af87141a1e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377198%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D30e8045f769c2c619b30b50167d2c99b;
-      expires=Thu, 17-Nov-2016 12:06:38 GMT; path=/
-    - csrf_xmen=b742573562c1ec1a80b50f24e51e44b5; expires=Thu, 17-Nov-2016 12:06:38
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22838cf23f0fda39c364ca5d266de5f64b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399956%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D587659441e744056cddfb7afeb321051;
+      expires=Thu, 17-Nov-2016 18:25:56 GMT; path=/
+    - csrf_xmen=2f7e7295d20443dab9a6f02e127765fd; expires=Thu, 17-Nov-2016 18:25:56
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16523'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:06:38 GMT
+recorded_at: Thu, 17 Nov 2016 16:25:56 GMT
