200 OK http://www.parliament.gh/parliamentarians/92

--- a/www.parliament.gh/81dcbef50c66ec10e394c707378b5fa49725a8cb.yml
+++ b/www.parliament.gh/81dcbef50c66ec10e394c707378b5fa49725a8cb.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:06:53 GMT
+    - Thu, 17 Nov 2016 16:26:21 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c536578315988a0d7a7e2123f7d6ca78%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377213%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D90936c09579c970ff8ba83c7a45c097f;
-      expires=Thu, 17-Nov-2016 12:06:53 GMT; path=/
-    - csrf_xmen=dea17a96d0e0c3b7e1ea1a177bfacb0e; expires=Thu, 17-Nov-2016 12:06:53
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22295d59988eeb44ccaf1cffb9dc6df7a1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479399981%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4429d8d73dfab9dc7b252b44dafd1f54;
+      expires=Thu, 17-Nov-2016 18:26:21 GMT; path=/
+    - csrf_xmen=75ec4919ebbe88d350bf05fe1941d94b; expires=Thu, 17-Nov-2016 18:26:21
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16537'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:06:53 GMT
+recorded_at: Thu, 17 Nov 2016 16:26:22 GMT
