--- a/www.parliament.gh/3a9f9d1f908294615b6d87f9e47b59132fdfadda.yml
+++ b/www.parliament.gh/3a9f9d1f908294615b6d87f9e47b59132fdfadda.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:09:51 GMT
+    - Thu, 17 Nov 2016 16:26:44 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c7f70a3be383a84bdc882e19d9dcb876%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377392%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7aceaacf63ddd7e7e9fcbedcb63f870d;
-      expires=Thu, 17-Nov-2016 12:09:52 GMT; path=/
-    - csrf_xmen=345359b6c5b7cf400920f21e31f74e73; expires=Thu, 17-Nov-2016 12:09:51
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fa483305611942d8ca3f89be7dcb6f18%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400004%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df9d420ec082c7ea783ed7140148b18d4;
+      expires=Thu, 17-Nov-2016 18:26:44 GMT; path=/
+    - csrf_xmen=a74bca73d14e9013e3e49d39b79e7ae5; expires=Thu, 17-Nov-2016 18:26:44
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16680'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:09:52 GMT
+recorded_at: Thu, 17 Nov 2016 16:26:44 GMT
