200 OK http://www.parliament.gh/parliamentarians/90

--- a/www.parliament.gh/dd3ae8e8ca4d52bda60eaef2a3482405883d9f56.yml
+++ b/www.parliament.gh/dd3ae8e8ca4d52bda60eaef2a3482405883d9f56.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:10:13 GMT
+    - Thu, 17 Nov 2016 16:27:11 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222a3cb840eff3b2bdede567393464d8c7%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377413%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0e527d50d01047f1d8640eb0af0e9df3;
-      expires=Thu, 17-Nov-2016 12:10:13 GMT; path=/
-    - csrf_xmen=30987cbcf3322dd2a8aaa7a7a988804e; expires=Thu, 17-Nov-2016 12:10:13
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22673b0bc6511af88a937c6ecf6829ef29%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400031%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7ff614984516f81a5794897186910914;
+      expires=Thu, 17-Nov-2016 18:27:11 GMT; path=/
+    - csrf_xmen=95b5ea4d62075d5338d6e0db007051aa; expires=Thu, 17-Nov-2016 18:27:11
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16925'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:10:13 GMT
+recorded_at: Thu, 17 Nov 2016 16:27:11 GMT
