--- a/www.parliament.gh/10be4549776b9333c3df58a318d62a8136462809.yml
+++ b/www.parliament.gh/10be4549776b9333c3df58a318d62a8136462809.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:10:36 GMT
+    - Thu, 17 Nov 2016 16:27:26 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e2eda930dc675b6ac69204f8ec729a19%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377436%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D66594b8fb44a794ccac8dbffd90c5916;
-      expires=Thu, 17-Nov-2016 12:10:36 GMT; path=/
-    - csrf_xmen=d81c6c8434beed26a8cc821b15517757; expires=Thu, 17-Nov-2016 12:10:36
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2269cc6f5cf227a9465142a4ebd228b12e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400046%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9f45d3ae92b837251067c7a2ebd4c4ad;
+      expires=Thu, 17-Nov-2016 18:27:26 GMT; path=/
+    - csrf_xmen=f4bccb39145dce236acde87699ebddcf; expires=Thu, 17-Nov-2016 18:27:26
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17009'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:10:36 GMT
+recorded_at: Thu, 17 Nov 2016 16:27:26 GMT
