--- a/www.parliament.gh/1286d335e792408e847a7886daa43fc15a6d7318.yml
+++ b/www.parliament.gh/1286d335e792408e847a7886daa43fc15a6d7318.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:10:58 GMT
+    - Thu, 17 Nov 2016 16:27:42 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227d298c85353e6220583b330308708390%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377458%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df74918917e995da5e32b331da236689f;
-      expires=Thu, 17-Nov-2016 12:10:58 GMT; path=/
-    - csrf_xmen=96373becb60848c6b13884a4f3e304a8; expires=Thu, 17-Nov-2016 12:10:58
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a94d3d334c3588b1169a0498456070de%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400062%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dabf20509e8d4bd3ae7ae7f39bae2509e;
+      expires=Thu, 17-Nov-2016 18:27:42 GMT; path=/
+    - csrf_xmen=5c7591c0b9d5a5a13bf68a43c0d85cb8; expires=Thu, 17-Nov-2016 18:27:42
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16673'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:10:59 GMT
+recorded_at: Thu, 17 Nov 2016 16:27:43 GMT
