200 OK http://www.parliament.gh/parliamentarians/332

--- a/www.parliament.gh/3c92e9eae07daeb0e168c6d202e1656b5eb3f076.yml
+++ b/www.parliament.gh/3c92e9eae07daeb0e168c6d202e1656b5eb3f076.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:11:18 GMT
+    - Thu, 17 Nov 2016 16:28:05 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2267e12bc6a84aab236e603ba7287428b4%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377478%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df0d021947e4befc1a4f7f20e3765eaab;
-      expires=Thu, 17-Nov-2016 12:11:18 GMT; path=/
-    - csrf_xmen=818da88d9a21c18d0aaf5ad7ff445fa9; expires=Thu, 17-Nov-2016 12:11:18
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220324603d3a511ef1c004d040809b4528%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400085%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbc9e572c1379d046c7c60ac3f3401733;
+      expires=Thu, 17-Nov-2016 18:28:05 GMT; path=/
+    - csrf_xmen=4ec80bae7df3ef6fdebe39a969f0ec4a; expires=Thu, 17-Nov-2016 18:28:05
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16549'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:11:18 GMT
+recorded_at: Thu, 17 Nov 2016 16:28:05 GMT
