--- a/www.parliament.gh/c1e1671e1996cd0a677a9f0e132342a7a5add657.yml
+++ b/www.parliament.gh/c1e1671e1996cd0a677a9f0e132342a7a5add657.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:11:41 GMT
+    - Thu, 17 Nov 2016 16:28:39 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a07ffbf8f03579fa144c024568cd58f0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377501%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da77e0ff0fd30a82bdd5dfda77cd98502;
-      expires=Thu, 17-Nov-2016 12:11:41 GMT; path=/
-    - csrf_xmen=2b7be000e191e9cb3717646a79174f30; expires=Thu, 17-Nov-2016 12:11:41
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2265102065d2f013328b52ea905d08891a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400119%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db20c648591a3d269988a8ccfc057fd0e;
+      expires=Thu, 17-Nov-2016 18:28:39 GMT; path=/
+    - csrf_xmen=3ff1faf6bf03e78864caffc660619936; expires=Thu, 17-Nov-2016 18:28:39
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16897'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:11:42 GMT
+recorded_at: Thu, 17 Nov 2016 16:28:39 GMT
