--- a/www.parliament.gh/a735bef3079ab335935943d3f9fb8b9b04e0abf6.yml
+++ b/www.parliament.gh/a735bef3079ab335935943d3f9fb8b9b04e0abf6.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:12:08 GMT
+    - Thu, 17 Nov 2016 16:32:28 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22396fd5347d6326e7fd211b8ded4293a8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377528%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8dc957c90a943b595ad7d9ea523339f1;
-      expires=Thu, 17-Nov-2016 12:12:08 GMT; path=/
-    - csrf_xmen=8046234df0676d9b9ec12df57b61f3ec; expires=Thu, 17-Nov-2016 12:12:08
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2232f970087b0e8fe7ae05159021b7c6ba%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400349%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De10c7baf266aca097b2059177511c1cc;
+      expires=Thu, 17-Nov-2016 18:32:29 GMT; path=/
+    - csrf_xmen=fc2379c6fbb3465030de9ca0b0cf5e4d; expires=Thu, 17-Nov-2016 18:32:28
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16684'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:12:08 GMT
+recorded_at: Thu, 17 Nov 2016 16:32:29 GMT
