--- a/www.parliament.gh/54c801a73ed246c3b88b27754ae99c42040339b2.yml
+++ b/www.parliament.gh/54c801a73ed246c3b88b27754ae99c42040339b2.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:12:25 GMT
+    - Thu, 17 Nov 2016 16:32:51 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2267676d4495f5a6a123ce601ba61ec408%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377545%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd3354782e4b893037a081d2c581cf28a;
-      expires=Thu, 17-Nov-2016 12:12:25 GMT; path=/
-    - csrf_xmen=fadb0761126bb8eb6f48d7b3902cb32a; expires=Thu, 17-Nov-2016 12:12:25
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22345ae3a7540ef36ceb553ea30b556e89%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400371%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbda00388d5b8894f72c610037e413874;
+      expires=Thu, 17-Nov-2016 18:32:51 GMT; path=/
+    - csrf_xmen=3ee66e2020b3c240192eb7947e8f53f2; expires=Thu, 17-Nov-2016 18:32:51
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16592'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:12:25 GMT
+recorded_at: Thu, 17 Nov 2016 16:32:52 GMT
