200 OK http://www.parliament.gh/parliamentarians/278

--- a/www.parliament.gh/bda298bdd96734cb07c7c1549986d1194bb7f28b.yml
+++ b/www.parliament.gh/bda298bdd96734cb07c7c1549986d1194bb7f28b.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:12:43 GMT
+    - Thu, 17 Nov 2016 16:33:22 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22549c2ef3cf5aef753b1ceb224b5215a3%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377563%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dacacc5a947bed2566cb89269bc74168c;
-      expires=Thu, 17-Nov-2016 12:12:43 GMT; path=/
-    - csrf_xmen=aabf0478120002ec48a6f50e077ab948; expires=Thu, 17-Nov-2016 12:12:43
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227a77662c7878c34c286a1a7991461f22%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400402%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db389254d377bf46b862360f563dd280e;
+      expires=Thu, 17-Nov-2016 18:33:22 GMT; path=/
+    - csrf_xmen=8a6770a6181be4991ffd97a361a42ffa; expires=Thu, 17-Nov-2016 18:33:22
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16442'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:12:43 GMT
+recorded_at: Thu, 17 Nov 2016 16:33:22 GMT
