200 OK http://www.parliament.gh/parliamentarians/204

--- a/www.parliament.gh/065b05596deddb7535e89903ea1a7359b93292cb.yml
+++ b/www.parliament.gh/065b05596deddb7535e89903ea1a7359b93292cb.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:13:02 GMT
+    - Thu, 17 Nov 2016 16:33:59 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2219fb823b99a19ce526d81a511de55eb4%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377582%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D833a32b22272c2204e99ff12cb588145;
-      expires=Thu, 17-Nov-2016 12:13:02 GMT; path=/
-    - csrf_xmen=b00bb34c5b88ad970f04e6e1003cb9bd; expires=Thu, 17-Nov-2016 12:13:02
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22edddcd40a5f06c01681593519b215786%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400440%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5044b1eae38207c32a514fe5a7920450;
+      expires=Thu, 17-Nov-2016 18:34:00 GMT; path=/
+    - csrf_xmen=1ea6c9f3684b485de2c9555ab63c420a; expires=Thu, 17-Nov-2016 18:34:00
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16537'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:13:02 GMT
+recorded_at: Thu, 17 Nov 2016 16:34:00 GMT
