--- a/www.parliament.gh/1d3263bc320e2e18dfb2a07832798c30b434fdc7.yml
+++ b/www.parliament.gh/1d3263bc320e2e18dfb2a07832798c30b434fdc7.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:13:24 GMT
+    - Thu, 17 Nov 2016 16:34:33 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225a9d3612696b843728956431bf9fb27d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377604%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da52efe48ded94465d6be8bf2edca17ea;
-      expires=Thu, 17-Nov-2016 12:13:24 GMT; path=/
-    - csrf_xmen=a1659ec2764dea5bd042915da358ba46; expires=Thu, 17-Nov-2016 12:13:24
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225a0a868401257476ba0b0b9f9b2c5dc3%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400473%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D795d9778207b82b4d55476d102bf18cd;
+      expires=Thu, 17-Nov-2016 18:34:33 GMT; path=/
+    - csrf_xmen=b6514789b6e426033d98f42bb2471d94; expires=Thu, 17-Nov-2016 18:34:33
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16515'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:13:24 GMT
+recorded_at: Thu, 17 Nov 2016 16:34:33 GMT
