--- a/www.parliament.gh/d72a248ae72c56ce11472d600abb5ee8a37153be.yml
+++ b/www.parliament.gh/d72a248ae72c56ce11472d600abb5ee8a37153be.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:13:44 GMT
+    - Thu, 17 Nov 2016 16:34:50 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220784e2ba6e95011fc5866b0d38c0a711%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377624%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7e303fb577879b669e1e394513c96afe;
-      expires=Thu, 17-Nov-2016 12:13:44 GMT; path=/
-    - csrf_xmen=606ce86c4d940e81bef0884a9283e7d4; expires=Thu, 17-Nov-2016 12:13:44
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ea58d5111d5d582dfad6a368cfcdcbc0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400490%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4bf0e7bab82add67910b18305a3597ab;
+      expires=Thu, 17-Nov-2016 18:34:50 GMT; path=/
+    - csrf_xmen=a5f3780cec226472d16e90698681e55b; expires=Thu, 17-Nov-2016 18:34:50
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16640'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:13:44 GMT
+recorded_at: Thu, 17 Nov 2016 16:34:51 GMT
