200 OK http://www.parliament.gh/parliamentarians/408

--- a/www.parliament.gh/3789636bb72be723cf1de24eb44345be42e073c9.yml
+++ b/www.parliament.gh/3789636bb72be723cf1de24eb44345be42e073c9.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:14:00 GMT
+    - Thu, 17 Nov 2016 16:35:11 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22de13c0f9350c98b1201b4b09fb7ef01a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377640%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Ddafc08683fc44451f5444ab4e08de1ee;
-      expires=Thu, 17-Nov-2016 12:14:00 GMT; path=/
-    - csrf_xmen=d9b004bbdcd6b8d8fea133a693808026; expires=Thu, 17-Nov-2016 12:14:00
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224eee10449c4b3d81dab2f1d54ace1038%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400511%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5f7917b7d9a9bb026503e24487aff49f;
+      expires=Thu, 17-Nov-2016 18:35:11 GMT; path=/
+    - csrf_xmen=113433d27729084136264f4048c70363; expires=Thu, 17-Nov-2016 18:35:11
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16657'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:14:00 GMT
+recorded_at: Thu, 17 Nov 2016 16:35:11 GMT
