--- a/www.parliament.gh/beeef163cb75f2e2cc695a6cfe69517b9c7e78b5.yml
+++ b/www.parliament.gh/beeef163cb75f2e2cc695a6cfe69517b9c7e78b5.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:14:26 GMT
+    - Thu, 17 Nov 2016 16:35:25 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2249907711cad3b48831f7efead024012f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377666%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1cc82ae9e2611a0cca1061644f91c0d8;
-      expires=Thu, 17-Nov-2016 12:14:26 GMT; path=/
-    - csrf_xmen=3bb94fa601ae43c60c7a3e46fd4cbbd0; expires=Thu, 17-Nov-2016 12:14:26
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f63975f595291823946a9a4d1b89238f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400525%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8755d8668cd50ac0fd2656a46399493c;
+      expires=Thu, 17-Nov-2016 18:35:25 GMT; path=/
+    - csrf_xmen=6c8ecc85db95ca70a13765f6753b7c51; expires=Thu, 17-Nov-2016 18:35:25
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16603'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:14:26 GMT
+recorded_at: Thu, 17 Nov 2016 16:35:26 GMT
