200 OK http://www.parliament.gh/parliamentarians/285

--- a/www.parliament.gh/6234d4fecee0573177e90e816fd1cbf89f114ced.yml
+++ b/www.parliament.gh/6234d4fecee0573177e90e816fd1cbf89f114ced.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:14:52 GMT
+    - Thu, 17 Nov 2016 16:35:40 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224e43dc2d0a0c19eb45cf84be0ba3ff99%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377693%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D18009f99ffe9830c9f185b3de0e7dfcf;
-      expires=Thu, 17-Nov-2016 12:14:53 GMT; path=/
-    - csrf_xmen=5f32d8fb2644de143ce678dd70780c45; expires=Thu, 17-Nov-2016 12:14:53
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220fb9ba16b00d62a02687deb5feba7f0b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400540%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5cb5226e71cee37825a5874d9cf4a73c;
+      expires=Thu, 17-Nov-2016 18:35:40 GMT; path=/
+    - csrf_xmen=57cb1cd039b840f1fb31fef04975fb4c; expires=Thu, 17-Nov-2016 18:35:40
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16442'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:14:53 GMT
+recorded_at: Thu, 17 Nov 2016 16:35:41 GMT
