--- a/www.parliament.gh/cf739ef7422af5fe96b2cb108b4285ce5d1f045e.yml
+++ b/www.parliament.gh/cf739ef7422af5fe96b2cb108b4285ce5d1f045e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:15:13 GMT
+    - Thu, 17 Nov 2016 16:35:57 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d890655757298d0f95ba286c0395b6b0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377713%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D397d9d2790b9d0cde29af054098c9b4a;
-      expires=Thu, 17-Nov-2016 12:15:13 GMT; path=/
-    - csrf_xmen=21abb3520a4d221e5281a0ed69d7acbd; expires=Thu, 17-Nov-2016 12:15:13
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ce3313632c1f2124b9709f3636d54e77%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400557%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1ead81f3059c9ff5e226fb327d3eea1c;
+      expires=Thu, 17-Nov-2016 18:35:57 GMT; path=/
+    - csrf_xmen=84770edb79c80a813c7e4930a6f0f00d; expires=Thu, 17-Nov-2016 18:35:57
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16457'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:15:13 GMT
+recorded_at: Thu, 17 Nov 2016 16:35:57 GMT
