--- a/www.parliament.gh/8890ebde8b771e4dc10072ff518e3a5f14f7abf5.yml
+++ b/www.parliament.gh/8890ebde8b771e4dc10072ff518e3a5f14f7abf5.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:15:30 GMT
+    - Thu, 17 Nov 2016 16:36:30 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ac705bb1790f0b366db8741cbaedcb0d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377730%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df9d9d4b69d5c64bfd455448957a5098a;
-      expires=Thu, 17-Nov-2016 12:15:30 GMT; path=/
-    - csrf_xmen=936ea8f5f2fecc13961c10dd63ff830d; expires=Thu, 17-Nov-2016 12:15:30
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2293cb0b6e6eb1079318ad7fd397ddaa60%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400590%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dabda053a501876a3c450a4b02d940757;
+      expires=Thu, 17-Nov-2016 18:36:30 GMT; path=/
+    - csrf_xmen=d0fca1f98a6cec155bc9d33a80c72ff9; expires=Thu, 17-Nov-2016 18:36:30
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16682'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:15:30 GMT
+recorded_at: Thu, 17 Nov 2016 16:36:31 GMT
