--- a/www.parliament.gh/7f7b06356878422bdc702b89be7930cc1ace5c35.yml
+++ b/www.parliament.gh/7f7b06356878422bdc702b89be7930cc1ace5c35.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:15:48 GMT
+    - Thu, 17 Nov 2016 16:36:53 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%226b44d7d9dce2e7f8243846536654b313%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377748%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc07bf97f0fc92b332ed5100598deba14;
-      expires=Thu, 17-Nov-2016 12:15:48 GMT; path=/
-    - csrf_xmen=9b1a228d9e8a5c99c056b974fb115df3; expires=Thu, 17-Nov-2016 12:15:48
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ab857027e86418642961fd672815772c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400613%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D981124a857bf201398c8cb8d82ae13a0;
+      expires=Thu, 17-Nov-2016 18:36:53 GMT; path=/
+    - csrf_xmen=e96da0f911be1018551a4c9028b71b19; expires=Thu, 17-Nov-2016 18:36:53
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16750'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:15:48 GMT
+recorded_at: Thu, 17 Nov 2016 16:36:53 GMT
