200 OK http://www.parliament.gh/parliamentarians/270

--- a/www.parliament.gh/7770ce62cb7830a1e177074ca9eac6b5f6b70798.yml
+++ b/www.parliament.gh/7770ce62cb7830a1e177074ca9eac6b5f6b70798.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:16:05 GMT
+    - Thu, 17 Nov 2016 16:37:25 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2291aff7a21d29a84c4e858c3f73f6fadd%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377765%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8ee1d8132dbb2838c109409484513fcb;
-      expires=Thu, 17-Nov-2016 12:16:05 GMT; path=/
-    - csrf_xmen=5161c7133572bfebfaa7de908bcced95; expires=Thu, 17-Nov-2016 12:16:05
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221577ba8435f1b71216f497ae0ce5f221%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400645%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D494a1cb3974e68d4353c205fa0bc4457;
+      expires=Thu, 17-Nov-2016 18:37:25 GMT; path=/
+    - csrf_xmen=bba8fc4e13c09717a08306d312ef68c5; expires=Thu, 17-Nov-2016 18:37:25
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16607'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:16:05 GMT
+recorded_at: Thu, 17 Nov 2016 16:37:25 GMT
