--- a/www.parliament.gh/a400de27b495cb36c96846edabc14880e1836d37.yml
+++ b/www.parliament.gh/a400de27b495cb36c96846edabc14880e1836d37.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:16:35 GMT
+    - Thu, 17 Nov 2016 16:37:57 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229afd888ca2f913ffc8531a5ea29f0efb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377795%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De5b6e0ff1d50331473f57af2304fada2;
-      expires=Thu, 17-Nov-2016 12:16:35 GMT; path=/
-    - csrf_xmen=73e0b0f839eaf108dfd6d014c7a47271; expires=Thu, 17-Nov-2016 12:16:35
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d0d4c3172295284bd308437d2293ccbb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400677%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D97363e88a35da4fb4752a6397b794a1d;
+      expires=Thu, 17-Nov-2016 18:37:57 GMT; path=/
+    - csrf_xmen=f6f30077264b6b31227545edf63f8400; expires=Thu, 17-Nov-2016 18:37:57
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16694'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:16:35 GMT
+recorded_at: Thu, 17 Nov 2016 16:37:57 GMT
