200 OK http://www.parliament.gh/parliamentarians/361

--- a/www.parliament.gh/80f2fb14ab847a4ca892e3bf50034072ff0578f6.yml
+++ b/www.parliament.gh/80f2fb14ab847a4ca892e3bf50034072ff0578f6.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:19:28 GMT
+    - Thu, 17 Nov 2016 16:38:18 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e00b6fe44e5f0c80518473a70a94b5e0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377968%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9a8b605b0735d5008b4d6de46d4c4a1b;
-      expires=Thu, 17-Nov-2016 12:19:28 GMT; path=/
-    - csrf_xmen=09bd7eeca14d87bb7be8172b431b02ca; expires=Thu, 17-Nov-2016 12:19:28
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a8edb93299dbb49a095ae76cb07b3f15%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400698%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8f8de9683e8c9765207e666614090495;
+      expires=Thu, 17-Nov-2016 18:38:18 GMT; path=/
+    - csrf_xmen=15dd333343a9fd1b3d57d7b77693440d; expires=Thu, 17-Nov-2016 18:38:18
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16475'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:19:29 GMT
+recorded_at: Thu, 17 Nov 2016 16:38:19 GMT
