--- a/www.parliament.gh/6c7dcbc2b3212be4d30478269443d94044091018.yml
+++ b/www.parliament.gh/6c7dcbc2b3212be4d30478269443d94044091018.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:19:45 GMT
+    - Thu, 17 Nov 2016 16:38:42 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ae161c41d6fb73637b7a0de000bd095b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479377985%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7e22d5320a9f244c9e0161849b6eff29;
-      expires=Thu, 17-Nov-2016 12:19:45 GMT; path=/
-    - csrf_xmen=cd584f3935fb860f5fd144de7b93dba0; expires=Thu, 17-Nov-2016 12:19:45
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e4ecbe8d144d1ba4bd4469fc713ce754%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400722%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2cb893cebdfc476c9d23ffb6d256cfd9;
+      expires=Thu, 17-Nov-2016 18:38:42 GMT; path=/
+    - csrf_xmen=40d326b24d0edda618e1522e2b70810e; expires=Thu, 17-Nov-2016 18:38:42
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16755'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:19:46 GMT
+recorded_at: Thu, 17 Nov 2016 16:38:42 GMT
