--- a/www.parliament.gh/b2a0f58c744147cf0647220f21f197a4f7057a5a.yml
+++ b/www.parliament.gh/b2a0f58c744147cf0647220f21f197a4f7057a5a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:20:05 GMT
+    - Thu, 17 Nov 2016 16:39:14 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e262d720bd2a217c4b6821ecbac4a4d0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378005%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd68537292ee751c1a3c85d5aeeed2c74;
-      expires=Thu, 17-Nov-2016 12:20:05 GMT; path=/
-    - csrf_xmen=b3a4145b3d983cfd5bb3a3255d4ed3ac; expires=Thu, 17-Nov-2016 12:20:05
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a14b0f97478f9a87a2044f2ad63a57ec%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400754%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3203a7a9a12de49fde957e541c19dad9;
+      expires=Thu, 17-Nov-2016 18:39:14 GMT; path=/
+    - csrf_xmen=353d234bd82d639c30e275587fbb4b73; expires=Thu, 17-Nov-2016 18:39:14
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16676'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:20:05 GMT
+recorded_at: Thu, 17 Nov 2016 16:39:14 GMT
