200 OK http://www.parliament.gh/parliamentarians/301

--- a/www.parliament.gh/6e18efab57fb51ff16bfd8ed4bb59a031845627c.yml
+++ b/www.parliament.gh/6e18efab57fb51ff16bfd8ed4bb59a031845627c.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:20:31 GMT
+    - Thu, 17 Nov 2016 16:39:43 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2267db1e402205e2ae1ed21f0fd82f5e67%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378031%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9ac3149d4cbde184ababb6fd99cf71f5;
-      expires=Thu, 17-Nov-2016 12:20:31 GMT; path=/
-    - csrf_xmen=303a0acd87cfbabf46fd14a9be726f61; expires=Thu, 17-Nov-2016 12:20:31
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227157d78683fb2142dd6ef58d54d1f01e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400783%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Ddf9ab29f52fb8a8b5ba0343b49dbf3e8;
+      expires=Thu, 17-Nov-2016 18:39:43 GMT; path=/
+    - csrf_xmen=616c69be4a1f8cf66f4bff57599518c9; expires=Thu, 17-Nov-2016 18:39:43
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16357'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:20:31 GMT
+recorded_at: Thu, 17 Nov 2016 16:39:43 GMT
