--- a/www.parliament.gh/143a423c032173fe19ca436af73a2052af6a03bf.yml
+++ b/www.parliament.gh/143a423c032173fe19ca436af73a2052af6a03bf.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:20:50 GMT
+    - Thu, 17 Nov 2016 16:39:57 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c2405d45ceabdd5a6fec41ce25e0a81d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378050%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc775fec0cda5af2bdc8e92476384015a;
-      expires=Thu, 17-Nov-2016 12:20:50 GMT; path=/
-    - csrf_xmen=95599af3cec46c136cf58187ee84774d; expires=Thu, 17-Nov-2016 12:20:50
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222afa9630ae2841eabafc326da40ac3ea%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400797%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3caf44835e6f7329c28ee70bb95cc62a;
+      expires=Thu, 17-Nov-2016 18:39:57 GMT; path=/
+    - csrf_xmen=173949951e0addc45016017d8a974192; expires=Thu, 17-Nov-2016 18:39:57
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16638'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:20:50 GMT
+recorded_at: Thu, 17 Nov 2016 16:39:57 GMT
