--- a/www.parliament.gh/13f72188b4da812b5a25cace4a9e6c3d480e18be.yml
+++ b/www.parliament.gh/13f72188b4da812b5a25cace4a9e6c3d480e18be.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:21:12 GMT
+    - Thu, 17 Nov 2016 16:40:12 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224d2e5419fe63bd56677465aa394efee9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378073%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbbffbaa8ccec75c1429f2b1c02792527;
-      expires=Thu, 17-Nov-2016 12:21:13 GMT; path=/
-    - csrf_xmen=3bac04022c98f570140183d41fa856cb; expires=Thu, 17-Nov-2016 12:21:12
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b8bd4788e232b0886579cc70767d6cf3%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400812%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D21bcea2379dda936102a07e7ff12e196;
+      expires=Thu, 17-Nov-2016 18:40:12 GMT; path=/
+    - csrf_xmen=6d07ff02330af360012a9abe8969d104; expires=Thu, 17-Nov-2016 18:40:12
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16738'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:21:13 GMT
+recorded_at: Thu, 17 Nov 2016 16:40:12 GMT
