200 OK http://www.parliament.gh/parliamentarians/242

--- a/www.parliament.gh/0602c53867a0515d46e7968b2a2e8450f0bb6a8c.yml
+++ b/www.parliament.gh/0602c53867a0515d46e7968b2a2e8450f0bb6a8c.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:21:35 GMT
+    - Thu, 17 Nov 2016 16:43:18 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22917a32ee4832459eecc4f2658f06c0bd%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378095%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D01e1049da79fc9b9f0ccecc40f9a3966;
-      expires=Thu, 17-Nov-2016 12:21:35 GMT; path=/
-    - csrf_xmen=76596afc189ec2b28863607c2d8d5d08; expires=Thu, 17-Nov-2016 12:21:35
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220e41efca922a15833047d7fc410b5521%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479400998%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6549b6deae560398f6ca1fe9410c741f;
+      expires=Thu, 17-Nov-2016 18:43:18 GMT; path=/
+    - csrf_xmen=e8aa45a4a283e339394078720449f381; expires=Thu, 17-Nov-2016 18:43:18
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16346'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:21:35 GMT
+recorded_at: Thu, 17 Nov 2016 16:43:18 GMT
