200 OK http://www.parliament.gh/parliamentarians/405

--- a/www.parliament.gh/806f54ac7fdb5068212fd9561bfb285e5acf6e2b.yml
+++ b/www.parliament.gh/806f54ac7fdb5068212fd9561bfb285e5acf6e2b.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:21:51 GMT
+    - Thu, 17 Nov 2016 16:43:32 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2228e774bf92cc1364e71e981b3bb5fb9a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378112%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2088a41e061e5369c7ca004d3ec734e1;
-      expires=Thu, 17-Nov-2016 12:21:52 GMT; path=/
-    - csrf_xmen=97554976ad74e3ba6e8a1ae4cdb752c2; expires=Thu, 17-Nov-2016 12:21:52
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e8a9533b834a8806bc992f646a76dae3%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401012%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9002efc8c93a2176756fce231dc8616c;
+      expires=Thu, 17-Nov-2016 18:43:32 GMT; path=/
+    - csrf_xmen=dceb9a828abaf5dbc937d20933071dd7; expires=Thu, 17-Nov-2016 18:43:32
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16211'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:21:52 GMT
+recorded_at: Thu, 17 Nov 2016 16:43:32 GMT
