200 OK http://www.parliament.gh/parliamentarians/275

--- a/www.parliament.gh/44aab1ce003c2b2521ab35ae671fe1ccc0de42f9.yml
+++ b/www.parliament.gh/44aab1ce003c2b2521ab35ae671fe1ccc0de42f9.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:22:20 GMT
+    - Thu, 17 Nov 2016 16:43:51 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22076a774133ac0bf3ebd8e198996dee3b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378140%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbee6ed1538dcf95e8eaf005836d8b2f4;
-      expires=Thu, 17-Nov-2016 12:22:20 GMT; path=/
-    - csrf_xmen=75cbd7d267497c1b9290ce32a5ea93bd; expires=Thu, 17-Nov-2016 12:22:20
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22eee0a66beb9b404bd6afc0557e6ff0e9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401031%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db34a8ace562fe884895c2b6afb9040fb;
+      expires=Thu, 17-Nov-2016 18:43:51 GMT; path=/
+    - csrf_xmen=1aad4ca720d009114b2485f922eae3f0; expires=Thu, 17-Nov-2016 18:43:51
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16723'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:22:20 GMT
+recorded_at: Thu, 17 Nov 2016 16:43:51 GMT
