200 OK http://www.parliament.gh/parliamentarians/196

--- a/www.parliament.gh/fab5707a946ac528891ff8d12d6917470ca40997.yml
+++ b/www.parliament.gh/fab5707a946ac528891ff8d12d6917470ca40997.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:23:20 GMT
+    - Thu, 17 Nov 2016 16:44:56 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b1a7065b132be583a43277160804b4f1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378200%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D64887891ada44324d777e723ae3494e0;
-      expires=Thu, 17-Nov-2016 12:23:20 GMT; path=/
-    - csrf_xmen=6a5cc53364cb5f523dd7e06e2b609ed7; expires=Thu, 17-Nov-2016 12:23:20
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220cc2c3f53500af0790aa609da8e340db%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401096%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D47b237e2215fb5ccbaf63770d6b7602d;
+      expires=Thu, 17-Nov-2016 18:44:56 GMT; path=/
+    - csrf_xmen=d60e372461d6b08002331cd63efe1cff; expires=Thu, 17-Nov-2016 18:44:56
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16463'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:23:20 GMT
+recorded_at: Thu, 17 Nov 2016 16:44:56 GMT
