200 OK http://www.parliament.gh/parliamentarians/412

--- a/www.parliament.gh/7644ef20f35d539c822924b14bbbcf2e66fa7198.yml
+++ b/www.parliament.gh/7644ef20f35d539c822924b14bbbcf2e66fa7198.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:23:41 GMT
+    - Thu, 17 Nov 2016 16:45:12 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fa189a25e16ab31f06e474e3f2367524%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378221%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6c2945aca03b1950e9ea11cd516e8458;
-      expires=Thu, 17-Nov-2016 12:23:41 GMT; path=/
-    - csrf_xmen=026cb46a80b471066f8f529e0ac9148e; expires=Thu, 17-Nov-2016 12:23:41
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222f94e4f3b7a4366f591054b73ed5ad19%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401112%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De4d13916984a280fb589e253afa54054;
+      expires=Thu, 17-Nov-2016 18:45:12 GMT; path=/
+    - csrf_xmen=5a4d9a1178cd7eb46772d713993c23b7; expires=Thu, 17-Nov-2016 18:45:12
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16271'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:23:41 GMT
+recorded_at: Thu, 17 Nov 2016 16:45:12 GMT
