200 OK http://www.parliament.gh/parliamentarians/351

--- a/www.parliament.gh/eb87c0c5b5e802a1a3b9c3cadde9e42a30963ab5.yml
+++ b/www.parliament.gh/eb87c0c5b5e802a1a3b9c3cadde9e42a30963ab5.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:24:26 GMT
+    - Thu, 17 Nov 2016 16:45:58 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220f3da4108426d382463f33224703c407%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378267%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D85717d98ddd03bee747425654a4b21e0;
-      expires=Thu, 17-Nov-2016 12:24:27 GMT; path=/
-    - csrf_xmen=0be20f0a6b71549189b4379c78897038; expires=Thu, 17-Nov-2016 12:24:26
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2217b3508f834bd0cdc99a33105ed6a082%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401158%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D48d2db6559dca2ceae2b9c2c4cd91fd1;
+      expires=Thu, 17-Nov-2016 18:45:58 GMT; path=/
+    - csrf_xmen=a225f7aab512ef05867df0622a93ab15; expires=Thu, 17-Nov-2016 18:45:58
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16529'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:24:27 GMT
+recorded_at: Thu, 17 Nov 2016 16:45:58 GMT
