200 OK http://www.parliament.gh/parliamentarians/393

--- a/www.parliament.gh/67f9df29143e6b2ce3adfe4f44c5299b3473adb6.yml
+++ b/www.parliament.gh/67f9df29143e6b2ce3adfe4f44c5299b3473adb6.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:25:52 GMT
+    - Thu, 17 Nov 2016 16:47:43 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22143eacf17d4277e665cbea36726077f3%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378352%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D480502d1996ac5bf1e31eace05433e0c;
-      expires=Thu, 17-Nov-2016 12:25:52 GMT; path=/
-    - csrf_xmen=e4204985ffbbee4f10e1c5c23a627b05; expires=Thu, 17-Nov-2016 12:25:52
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ee9be5f602885320943073cebf8318fb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401263%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9b5f04cc8eb85fd418b85c042ee5e845;
+      expires=Thu, 17-Nov-2016 18:47:43 GMT; path=/
+    - csrf_xmen=132d8c6538042c10ff6cd5c457d9d281; expires=Thu, 17-Nov-2016 18:47:43
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16735'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:25:52 GMT
+recorded_at: Thu, 17 Nov 2016 16:47:43 GMT
