200 OK http://www.parliament.gh/parliamentarians/373

--- a/www.parliament.gh/188d0bb86792d272fa248ecbba787d551be84afa.yml
+++ b/www.parliament.gh/188d0bb86792d272fa248ecbba787d551be84afa.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:26:14 GMT
+    - Thu, 17 Nov 2016 16:48:17 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2213cd0bc1ff793c807ab4e0d3494003f4%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479378374%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3a23f0326a08687ad1db82e68de566e0;
-      expires=Thu, 17-Nov-2016 12:26:14 GMT; path=/
-    - csrf_xmen=fd8b9e7727f571d53949cd6526e95150; expires=Thu, 17-Nov-2016 12:26:14
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2255529181db83248e6342de8d9db3d24a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479401297%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dba0d95936160d09e6be18e975771fa30;
+      expires=Thu, 17-Nov-2016 18:48:17 GMT; path=/
+    - csrf_xmen=d8cc0e9011d443b74bc93c95d021917b; expires=Thu, 17-Nov-2016 18:48:17
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16828'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:26:15 GMT
+recorded_at: Thu, 17 Nov 2016 16:48:17 GMT
